--- a/temporanr-samples.tex
+++ b/temporanr-samples.tex
@@ -1,12 +1,12 @@
 \documentclass[a4paper]{article}
 \usepackage{fontspec}
 \usepackage[margin=2.50cm]{geometry}
-\setmainfont{TemporaNR}
+\setmainfont{TemporaNR}[]
 \usepackage{lipsum}
 \begin{document}
 \thispagestyle{empty}
 
-\begin{center}\huge TemporaNR
+\begin{center}\huge \textsc{\textbf{TemporaNR}}
 \end{center}
 
 
